fix(ui): overflow issues & better wrapping

--- a/app/public/tailwind.css
+++ b/app/public/tailwind.css
@@ -1,4 +1,4 @@
-/*! tailwindcss v4.1.17 | MIT License | https://tailwindcss.com */
+/*! tailwindcss v4.1.18 | MIT License | https://tailwindcss.com */
 @layer properties;
 @layer theme, base, components, utilities;
 @layer theme {
@@ -768,6 +768,9 @@
   .max-h-60 {
     max-height: calc(var(--spacing) * 60);
   }
+  .max-h-\[12vh\] {
+    max-height: 12vh;
+  }
   .max-h-\[70\%\] {
     max-height: 70%;
   }
@@ -839,9 +842,6 @@
   }
   .w-32 {
     width: calc(var(--spacing) * 32);
-  }
-  .w-35 {
-    width: calc(var(--spacing) * 35);
   }
   .w-40 {
     width: calc(var(--spacing) * 40);
